add report suport
